fixed overflow issues with footer and width of footer on ultrawide screens

--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -3,6 +3,6 @@
   background: linear-gradient(rgb(91, 87, 115), rgba(0, 0, 0));
   color: white;
   padding: 30px;
-  height: 85vh;
+  height: 90vh;
   overflow: scroll;
 }
