--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  height: 90vh;
+  height: 94vh;
   flex: 0.2;
   background-color: black;
   color: white;
