--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body::-webkit-scrollbar {
 }
 
 body {
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
